--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "numpy==2.2.2",
+    "pandas==2.2.3",
+    "torch==2.6.0"
 ]
 
 [project.urls]
