--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "beautifulsoup4==4.13.3",
     "numpy==2.2.2",
     "pandas==2.2.3",
     "torch==2.6.0"
