--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+# mac crap
+.DS_Store
+
 # ides
 .idea
 .vscode
@@ -14,6 +18,9 @@ Scripts
 **.egg-info
 dist
 build
+
+# py
+__pycache__
 
 # project
 data
