--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "beautifulsoup4==4.13.3",
     "numpy==2.2.2",
     "pandas==2.2.3",
-    "torch==2.6.0"
+    "torch==2.6.0",
+    "requests==2.32.3"
 ]
 
 [project.urls]
