--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "numpy==2.2.2",
     "pandas==2.2.3",
     "torch==2.6.0",
-    "requests==2.32.3"
+    "requests==2.32.3",
+    "html5lib==1.1"
 ]
 
 [project.urls]
