--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cmx-capstone-ml_MORRISWA"
-version = "0.0.0.dev0"
+version = "0.0.2"
 authors = [
   { name="William Morris", email="william@morriswa.org" },
 ]
